--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "gitbook-cli": "^2.3.0",
     "glob": "^6.0.4",
     "jest": "^18.0.0",
+    "ramda-fantasy": "^0.7.0",
     "rimraf": "^2.3.4",
     "rxjs": "^5.0.0-beta.6",
     "typescript": "^1.8.0",
