--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "future-redux",
-  "version": "0.1.0",
+  "version": "0.1.01",
   "description": "Predictable state container for JavaScript apps",
   "browser": "dist/redux.js",
   "main": "lib/index.js",
@@ -117,14 +117,12 @@
     "webpack": "^1.9.6"
   },
   "npmName": "redux",
-  "npmFileMap": [
-    {
-      "basePath": "/dist/",
-      "files": [
-        "*.js"
-      ]
-    }
-  ],
+  "npmFileMap": [{
+    "basePath": "/dist/",
+    "files": [
+      "*.js"
+    ]
+  }],
   "browserify": {
     "transform": [
       "loose-envify"
